<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="application_name">OpenScienceMap</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_last_location_unknown">The last location is unknown</string>
    <string name="file_invalid">The selected file is invalid.</string>
    <string name="file_select">Please select a file.</string>
    <string name="file_size_byte">byte</string>
    <string name="file_size_bytes">bytes</string>
    <string name="file_size_kb">kB</string>
    <string name="file_size_mb">MB</string>
    <string name="file_size_gb">GB</string>
    <string name="go_to_position">Go to position</string>
    <string name="info_map_file_area">Area</string>
    <string name="info_map_file_comment">Comment</string>
    <string name="info_map_file_created_by">Created by</string>
    <string name="info_map_file_date">Date</string>
    <string name="info_map_file_debug">Debug information</string>
    <string name="info_map_file_debug_no">not included</string>
    <string name="info_map_file_debug_yes">included</string>
    <string name="info_map_file_language_preference">Language preference</string>
    <string name="info_map_file_name">File</string>
    <string name="info_map_file_size">File size</string>
    <string name="info_map_file_start_position">Start position</string>
    <string name="info_map_file_start_zoom_level">Start zoom level</string>
    <string name="info_map_file_version">Version</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_layer_grid">Grid</string>
    <string name="menu_layer_naturalearth">Natural Earth</string>
    <string name="menu_layer_openstreetmap">OpenStreetMap</string>
    <string name="menu_info_map_file">Map file properties</string>
    <string name="menu_find">Find</string>
    <string name="menu_info_about">About</string>
    <string name="menu_mapfile">Map file</string>
    <string name="menu_position">Position</string>
    <string name="menu_compass_enable">Compass</string>
    <string name="menu_position_enter_coordinates">Enter coordinates</string>
    <string name="menu_position_last_known">Last known location</string>
    <string name="menu_position_map_file_center">Map file center</string>
    <string name="menu_position_my_location_enable">Show my location</string>
    <string name="menu_position_follow_location">Follow my location</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_compass_2d">Compass 2D</string>
    <string name="menu_compass_3d">Compass 3D</string>
    <string name="menu_compass_off">Compass Off</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_render_theme">Theme</string>
    <string name="no_location_provider_available">No location source available</string>
    <string name="snap_to_location_enabled">Snap to position is activated</string>
    <string name="snap_to_location_disabled">Snap to position is disabled</string>
    <string name="unit_symbol_kilometer">&#160;km</string>
    <string name="unit_symbol_meter">&#160;m</string>
    <string name="zoomLevel">Zoom level</string>
    <string name="menu_options">Options</string>
    <string name="menu_pois">Bars nearby</string>
    <string name="menu_poi_list">List POIs</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="viapoint">Via-Point</string>

</resources>